[package]
name = "tauri-plugin-screen-lock-status"
version = "0.1.2"
authors = ["ren40"]
description = "This plugin helps track the lock status for the current session"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
rust-version = "1.71"
exclude = ["/examples"]
repository = "https://github.com/ren40/tauri-plugin-screen-lock-status"
keywords = ["tauri", "tauri-plugin", "detect_session_lock"]

[dependencies]
tauri = { version = "2.1.1", features = [] }
tracing = "0.1.41"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10.0"
core-graphics = "0.24.0"

[target."cfg(linux)".dependencies]
zbus = "5.2.0"

[target."cfg(windows)".dependencies.windows]
version = "0.*"
features = [
  "Win32_Foundation",
  "Win32_System_RemoteDesktop",
  "Win32_System_LibraryLoader",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Graphics_Gdi",
  "Win32_UI_Input_KeyboardAndMouse",
]
